// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupProfile edit screen renders editing state 1`] = `
<View
  flex={1}
>
  <Analytics
    screenContext={
      Object {
        "cru.permission-type": "owner",
      }
    }
    screenName={
      Array [
        "community",
        "detail",
      ]
    }
  />
  <View
    forceInset={
      Object {
        "bottom": "never",
      }
    }
    style={
      Object {
        "backgroundColor": "#007398",
      }
    }
  >
    <Header
      left={
        <IconButton
          name="deleteIcon"
          onPress={[Function]}
          style={
            Object {
              "paddingLeft": 10,
            }
          }
          type="MissionHub"
        />
      }
      right={
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
          onPress={[Function]}
          style={
            Object {
              "paddingRight": 15,
            }
          }
          text="DONE"
          type="transparent"
        />
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#505256",
        "flex": 1,
      }
    }
  >
    <withI18nextTranslation(ImagePicker)
      onSelectImage={[Function]}
    >
      <Flex
        align="center"
        justify="center"
        style={
          Object {
            "backgroundColor": "#005A7F",
            "borderRadius": 4,
            "height": 421.875,
            "position": "relative",
            "width": 750,
          }
        }
      >
        <Flex
          align="center"
          justify="center"
          style={
            Object {
              "left": 0,
              "position": "absolute",
              "right": 0,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/cameraIcon.png",
              }
            }
          />
        </Flex>
      </Flex>
    </withI18nextTranslation(ImagePicker)>
    <ScrollViewMock
      keyboardShouldPersistTaps="handled"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Input
          autoCorrect={true}
          autoFocus={true}
          blurOnSubmit={true}
          maxLength={44}
          onChangeText={[Function]}
          returnKeyType="done"
          selectionColor="#ffffff"
          style={
            Object {
              "borderBottomWidth": 0,
              "color": "#ffffff",
              "flex": 1,
              "fontSize": 32,
              "letterSpacing": 0.25,
              "paddingVertical": 0,
              "textAlign": "left",
            }
          }
          underlineColorAndroid="transparent"
          value="Test Organization"
        />
        <withI18nextTranslation(PopupMenu)
          actions={
            Array [
              Object {
                "destructive": true,
                "onPress": [Function],
                "text": "Delete",
              },
            ]
          }
          iconProps={
            Object {
              "size": 20,
              "style": Object {
                "color": "#ffffff",
                "marginLeft": 15,
              },
            }
          }
        />
      </Flex>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Owner
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 12,
              }
            }
          >
            Test Owner 1
          </MyText>
        </Flex>
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Created
          </MyText>
          <DateComponent
            date="2018-11-06T12:00:00Z"
            format="LL"
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 12,
              }
            }
          />
        </Flex>
      </Flex>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Members
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 12,
              }
            }
          >
            3
          </MyText>
        </Flex>
      </Flex>
      <Separator
        style={
          Object {
            "marginVertical": 5,
          }
        }
      />
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Community Code
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 32,
              }
            }
          >
            333333
          </MyText>
        </Flex>
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
          onPress={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#52C5DC",
                "borderRadius": 15,
                "paddingHorizontal": 20,
                "paddingVertical": 7,
              },
              Object {
                "backgroundColor": "#FF5532",
              },
            ]
          }
          text="NEW CODE"
          type="transparent"
        />
      </Flex>
      <Separator
        style={
          Object {
            "marginVertical": 5,
          }
        }
      />
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Community Link
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 14,
                "marginRight": 5,
              }
            }
          >
            undefinedabc123
          </MyText>
        </Flex>
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
          onPress={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#52C5DC",
                "borderRadius": 15,
                "paddingHorizontal": 20,
                "paddingVertical": 7,
              },
              Object {
                "backgroundColor": "#FF5532",
              },
            ]
          }
          text="NEW LINK"
          type="transparent"
        />
      </Flex>
      <Separator
        style={
          Object {
            "marginVertical": 5,
          }
        }
      />
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <MyText
          style={
            Object {
              "color": "#A0A2A6",
              "width": "75%",
            }
          }
        >
          Anyone who has this code or link will be able to join your group.
        </MyText>
      </Flex>
    </ScrollViewMock>
  </View>
</View>
`;

exports[`GroupProfile edit screen stops editing 1`] = `
<View
  flex={1}
>
  <Analytics
    screenContext={
      Object {
        "cru.permission-type": "owner",
      }
    }
    screenName={
      Array [
        "community",
        "detail",
      ]
    }
  />
  <View
    forceInset={
      Object {
        "bottom": "never",
      }
    }
    style={
      Object {
        "backgroundColor": "#007398",
      }
    }
  >
    <Header
      left={
        <IconButton
          name="deleteIcon"
          onPress={[Function]}
          style={
            Object {
              "paddingLeft": 10,
            }
          }
          type="MissionHub"
        />
      }
      right={
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
          onPress={[Function]}
          style={
            Object {
              "paddingRight": 15,
            }
          }
          text="EDIT"
          type="transparent"
        />
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#505256",
        "flex": 1,
      }
    }
  >
    <Flex
      align="center"
      justify="center"
      style={
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 4,
          "height": 421.875,
          "position": "relative",
          "width": 750,
        }
      }
    />
    <ScrollViewMock
      keyboardShouldPersistTaps="handled"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <MyText
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 32,
              "letterSpacing": 0.25,
            }
          }
        >
          Test Organization
        </MyText>
      </Flex>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Owner
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 12,
              }
            }
          >
            Test Owner 1
          </MyText>
        </Flex>
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Created
          </MyText>
          <DateComponent
            date="2018-11-06T12:00:00Z"
            format="LL"
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 12,
              }
            }
          />
        </Flex>
      </Flex>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Members
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 12,
              }
            }
          >
            3
          </MyText>
        </Flex>
      </Flex>
      <Separator
        style={
          Object {
            "marginVertical": 5,
          }
        }
      />
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Community Code
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 32,
              }
            }
          >
            333333
          </MyText>
        </Flex>
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
          onPress={[Function]}
          style={
            Object {
              "backgroundColor": "#52C5DC",
              "borderRadius": 15,
              "paddingHorizontal": 20,
              "paddingVertical": 7,
            }
          }
          text="COPY"
          type="transparent"
        />
      </Flex>
      <Separator
        style={
          Object {
            "marginVertical": 5,
          }
        }
      />
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Community Link
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 14,
                "marginRight": 5,
              }
            }
          >
            undefinedabc123
          </MyText>
        </Flex>
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
          onPress={[Function]}
          style={
            Object {
              "backgroundColor": "#52C5DC",
              "borderRadius": 15,
              "paddingHorizontal": 20,
              "paddingVertical": 7,
            }
          }
          text="COPY"
          type="transparent"
        />
      </Flex>
      <Separator
        style={
          Object {
            "marginVertical": 5,
          }
        }
      />
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <MyText
          style={
            Object {
              "color": "#A0A2A6",
              "width": "75%",
            }
          }
        >
          Anyone who has this code or link will be able to join your group.
        </MyText>
      </Flex>
    </ScrollViewMock>
  </View>
</View>
`;

exports[`GroupProfile renders correctly 1`] = `
<View
  flex={1}
>
  <Analytics
    screenContext={
      Object {
        "cru.permission-type": "owner",
      }
    }
    screenName={
      Array [
        "community",
        "detail",
      ]
    }
  />
  <View
    forceInset={
      Object {
        "bottom": "never",
      }
    }
    style={
      Object {
        "backgroundColor": "#007398",
      }
    }
  >
    <Header
      left={
        <IconButton
          name="deleteIcon"
          onPress={[Function]}
          style={
            Object {
              "paddingLeft": 10,
            }
          }
          type="MissionHub"
        />
      }
      right={
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
          onPress={[Function]}
          style={
            Object {
              "paddingRight": 15,
            }
          }
          text="EDIT"
          type="transparent"
        />
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#505256",
        "flex": 1,
      }
    }
  >
    <Flex
      align="center"
      justify="center"
      style={
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 4,
          "height": 421.875,
          "position": "relative",
          "width": 750,
        }
      }
    />
    <ScrollViewMock
      keyboardShouldPersistTaps="handled"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <MyText
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 32,
              "letterSpacing": 0.25,
            }
          }
        >
          Test Organization
        </MyText>
      </Flex>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Owner
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 12,
              }
            }
          >
            Test Owner 1
          </MyText>
        </Flex>
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Created
          </MyText>
          <DateComponent
            date="2018-11-06T12:00:00Z"
            format="LL"
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 12,
              }
            }
          />
        </Flex>
      </Flex>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Members
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 12,
              }
            }
          >
            3
          </MyText>
        </Flex>
      </Flex>
      <Separator
        style={
          Object {
            "marginVertical": 5,
          }
        }
      />
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Community Code
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 32,
              }
            }
          >
            333333
          </MyText>
        </Flex>
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
          onPress={[Function]}
          style={
            Object {
              "backgroundColor": "#52C5DC",
              "borderRadius": 15,
              "paddingHorizontal": 20,
              "paddingVertical": 7,
            }
          }
          text="COPY"
          type="transparent"
        />
      </Flex>
      <Separator
        style={
          Object {
            "marginVertical": 5,
          }
        }
      />
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Community Link
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 14,
                "marginRight": 5,
              }
            }
          >
            undefinedabc123
          </MyText>
        </Flex>
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
          onPress={[Function]}
          style={
            Object {
              "backgroundColor": "#52C5DC",
              "borderRadius": 15,
              "paddingHorizontal": 20,
              "paddingVertical": 7,
            }
          }
          text="COPY"
          type="transparent"
        />
      </Flex>
      <Separator
        style={
          Object {
            "marginVertical": 5,
          }
        }
      />
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <MyText
          style={
            Object {
              "color": "#A0A2A6",
              "width": "75%",
            }
          }
        >
          Anyone who has this code or link will be able to join your group.
        </MyText>
      </Flex>
    </ScrollViewMock>
  </View>
</View>
`;

exports[`GroupProfile renders with image 1`] = `
<View
  flex={1}
>
  <Analytics
    screenContext={
      Object {
        "cru.permission-type": "owner",
      }
    }
    screenName={
      Array [
        "community",
        "detail",
      ]
    }
  />
  <View
    forceInset={
      Object {
        "bottom": "never",
      }
    }
    style={
      Object {
        "backgroundColor": "#007398",
      }
    }
  >
    <Header
      left={
        <IconButton
          name="deleteIcon"
          onPress={[Function]}
          style={
            Object {
              "paddingLeft": 10,
            }
          }
          type="MissionHub"
        />
      }
      right={
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
          onPress={[Function]}
          style={
            Object {
              "paddingRight": 15,
            }
          }
          text="EDIT"
          type="transparent"
        />
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#505256",
        "flex": 1,
      }
    }
  >
    <Flex
      align="center"
      justify="center"
      style={
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 4,
          "height": 421.875,
          "position": "relative",
          "width": 750,
        }
      }
    />
    <ScrollViewMock
      keyboardShouldPersistTaps="handled"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <MyText
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 32,
              "letterSpacing": 0.25,
            }
          }
        >
          Test Organization
        </MyText>
      </Flex>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Owner
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 12,
              }
            }
          >
            Test Owner 1
          </MyText>
        </Flex>
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Created
          </MyText>
          <DateComponent
            date="2018-11-06T12:00:00Z"
            format="LL"
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 12,
              }
            }
          />
        </Flex>
      </Flex>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Members
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 12,
              }
            }
          >
            3
          </MyText>
        </Flex>
      </Flex>
      <Separator
        style={
          Object {
            "marginVertical": 5,
          }
        }
      />
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Community Code
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 32,
              }
            }
          >
            333333
          </MyText>
        </Flex>
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
          onPress={[Function]}
          style={
            Object {
              "backgroundColor": "#52C5DC",
              "borderRadius": 15,
              "paddingHorizontal": 20,
              "paddingVertical": 7,
            }
          }
          text="COPY"
          type="transparent"
        />
      </Flex>
      <Separator
        style={
          Object {
            "marginVertical": 5,
          }
        }
      />
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Community Link
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 14,
                "marginRight": 5,
              }
            }
          >
            undefinedabc123
          </MyText>
        </Flex>
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
          onPress={[Function]}
          style={
            Object {
              "backgroundColor": "#52C5DC",
              "borderRadius": 15,
              "paddingHorizontal": 20,
              "paddingVertical": 7,
            }
          }
          text="COPY"
          type="transparent"
        />
      </Flex>
      <Separator
        style={
          Object {
            "marginVertical": 5,
          }
        }
      />
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <MyText
          style={
            Object {
              "color": "#A0A2A6",
              "width": "75%",
            }
          }
        >
          Anyone who has this code or link will be able to join your group.
        </MyText>
      </Flex>
    </ScrollViewMock>
  </View>
</View>
`;

exports[`GroupProfile renders without edit button 1`] = `
<View
  flex={1}
>
  <Analytics
    screenContext={
      Object {
        "cru.permission-type": "member",
      }
    }
    screenName={
      Array [
        "community",
        "detail",
      ]
    }
  />
  <View
    forceInset={
      Object {
        "bottom": "never",
      }
    }
    style={
      Object {
        "backgroundColor": "#007398",
      }
    }
  >
    <Header
      left={
        <IconButton
          name="deleteIcon"
          onPress={[Function]}
          style={
            Object {
              "paddingLeft": 10,
            }
          }
          type="MissionHub"
        />
      }
      right={null}
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#505256",
        "flex": 1,
      }
    }
  >
    <Flex
      align="center"
      justify="center"
      style={
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 4,
          "height": 421.875,
          "position": "relative",
          "width": 750,
        }
      }
    />
    <ScrollViewMock
      keyboardShouldPersistTaps="handled"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <MyText
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 32,
              "letterSpacing": 0.25,
            }
          }
        >
          Test Organization
        </MyText>
      </Flex>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Owner
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 12,
              }
            }
          >
            Test Owner 1
          </MyText>
        </Flex>
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Created
          </MyText>
          <DateComponent
            date="2018-11-06T12:00:00Z"
            format="LL"
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 12,
              }
            }
          />
        </Flex>
      </Flex>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Members
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 12,
              }
            }
          >
            3
          </MyText>
        </Flex>
      </Flex>
      <Separator
        style={
          Object {
            "marginVertical": 5,
          }
        }
      />
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Community Code
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 32,
              }
            }
          >
            333333
          </MyText>
        </Flex>
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
          onPress={[Function]}
          style={
            Object {
              "backgroundColor": "#52C5DC",
              "borderRadius": 15,
              "paddingHorizontal": 20,
              "paddingVertical": 7,
            }
          }
          text="COPY"
          type="transparent"
        />
      </Flex>
      <Separator
        style={
          Object {
            "marginVertical": 5,
          }
        }
      />
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <Flex
          direction="column"
          value={1}
        >
          <MyText
            style={
              Object {
                "color": "#A0A2A6",
                "fontSize": 12,
              }
            }
          >
            Community Link
          </MyText>
          <MyText
            style={
              Object {
                "color": "#ffffff",
                "fontSize": 14,
                "marginRight": 5,
              }
            }
          >
            undefinedabc123
          </MyText>
        </Flex>
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
          onPress={[Function]}
          style={
            Object {
              "backgroundColor": "#52C5DC",
              "borderRadius": 15,
              "paddingHorizontal": 20,
              "paddingVertical": 7,
            }
          }
          text="COPY"
          type="transparent"
        />
      </Flex>
      <Separator
        style={
          Object {
            "marginVertical": 5,
          }
        }
      />
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginHorizontal": 20,
            "marginVertical": 10,
          }
        }
      >
        <MyText
          style={
            Object {
              "color": "#A0A2A6",
              "width": "75%",
            }
          }
        >
          Anyone who has this code or link will be able to join your group.
        </MyText>
      </Flex>
    </ScrollViewMock>
  </View>
</View>
`;
